refactor: function names and routes end point name.
